menambahkan script ketebalan di file teampoin.css

--- a/teampoin/teampoin.css
+++ b/teampoin/teampoin.css
@@ -12,6 +12,7 @@ button {
     text-transform: uppercase;
     padding: 16px 32px;
     background-color: transparent;
+    font-weight: bold;
     border: 1px solid #F6EE22;
     color: #F6EE22;
     cursor: pointer;
